# imprompter

./: .gitignore  404.html  CNAME  README.md  evaluation.ipynb  extra.css  index.html  mkdocs.yml  pii_metric.py  pyproject.toml
.github/workflows/: ci.yml
browser_automation/: base.py  chatglm.py  main.py  mistral_ai.py
configs/: device_map_config.json  model_path_config.json
datasets/testing/: ood_conversations.json  pii_conversations_rest25_gt_example.json
datasets/training/: conversations_keywords_glm4browserpath.json  conversations_keywords_glm4mdimgpath.json  conversations_keywords_glm4mdimgpath_36.json  conversations_keywords_llama3_70bllama_func_xml.json  conversations_keywords_llama3_70bllama_func_xml_24.json  conversations_keywords_llama3_70bllama_func_xml_36.json  conversations_keywords_nemomdimgpathwohello.json  conversations_keywords_url_glm4.json
docs/: index.md
docs/overrides/: main.html
evaluations/local_evaluations/: T1.json  T10.json  T10init+T9init+N6nemo.json  T11.json  T12.json  T12init+T11init+N6glm.json  T2.json  T2init+T1init+N1.json  T3.json  T3init+N2.json  T4.json  T4init+N3.json  T5.json  T6.json  T6init+T5init+N4.json  T7.json  T8.json  T8init+T7init+N5.json  T9.json
evaluations/product_evaluations/: N1_lechat.json  N4_chatglm.json  N6_chatglm.json  N6_lechat.json  T1.json  T10.json  T10_infoexfil.json  T11.json  T12.json  T5.json
imprompter/: run_experiments.py  training.py  utils.py
results/: T3.pkl  T4.pkl  T7.pkl  T8.pkl
scripts/: T1.sh  T10.sh  T11.sh  T12.sh  T2.sh  T3.sh  T4.sh  T5.sh  T6.sh  T7.sh  T8.sh  T9.sh
