[project]
name = "imprompter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Xiaohan Fu", email = "reapor.yurnero@gmail.com"},
]
dependencies = [
    "vllm==0.5.4",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "transformers==4.43.2",
    "numpy==1.26.4",
    "accelerate>=0.34.0",
    "openai>=0.28.0",
    "tiktoken>=0.7.0",
    "nltk==3.9.1",
    "selenium>=4.25.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GNL"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material>=9.5.42",
    "mkdocs-video>=1.5.0",
]
